[gd_scene load_steps=3 format=3 uid="uid://bg684sboylrbo"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_brvin"]
[ext_resource type="Theme" uid="uid://bpk41v36e0nqm" path="res://Assets/Themes/buttons.tres" id="1_nwjp2"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_brvin")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0941176, 0.0941176, 0.0941176, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 310.0
offset_bottom = 240.0
theme_override_constants/margin_left = 438
theme_override_constants/margin_top = 172
theme_override_constants/margin_right = 438
theme_override_constants/margin_bottom = 173

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_nwjp2")
text = "Play"

[node name="Guide Book" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_nwjp2")
text = "Move List"

[node name="Settings" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("1_nwjp2")
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_nwjp2")
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Guide Book" to="." method="_on_guide_book_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
